--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,28 @@
 {
   "name": "anime-world-backend",
   "version": "1.0.0",
+  "description": "Backend for Anime World streaming platform",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.0.0",
+    "mongoose": "^7.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
-  }
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.40.0",
+    "i18next": "^22.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": ["anime", "streaming", "backend", "mongodb"],
+  "author": "Your Name",
+  "license": "MIT"
 }
