--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,28 @@
 {
   "name": "anime-world-backend",
   "version": "1.0.0",
-  "description": "Backend for Anime World streaming platform",
+  "description": "Backend API for Anime World streaming platform",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "build": "echo 'No build step needed for Node.js'",
+    "test": "echo 'No tests specified'",
+    "seed": "node scripts/seedData.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
+  "keywords": [
+    "anime",
+    "streaming",
+    "api",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
+  "author": "Anime World Team",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
@@ -17,12 +32,29 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "cloudinary": "^1.40.0",
-    "i18next": "^22.5.0"
+    "i18next": "^22.5.0",
+    "i18next-fs-backend": "^2.2.0",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-node": "^11.1.0"
   },
-  "keywords": ["anime", "streaming", "backend", "mongodb"],
-  "author": "Your Name",
-  "license": "MIT"
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/anime-world.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/anime-world/issues"
+  },
+  "homepage": "https://github.com/your-username/anime-world#readme"
 }
