--- a/backend/package.json
+++ b/backend/package.json
@@ -7,20 +7,11 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "build": "echo 'No build step needed for Node.js'",
-    "test": "echo 'No tests specified'",
-    "seed": "node scripts/seedData.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "build": "echo 'No build step needed for Node.js' && exit 0",
+    "test": "echo 'No tests specified' && exit 0",
+    "seed": "node scripts/seedData.js"
   },
-  "keywords": [
-    "anime",
-    "streaming",
-    "api",
-    "nodejs",
-    "express",
-    "mongodb"
-  ],
+  "keywords": ["anime", "streaming", "api", "nodejs", "express", "mongodb"],
   "author": "Anime World Team",
   "license": "MIT",
   "dependencies": {
@@ -31,30 +22,9 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.40.0",
-    "i18next": "^22.5.0",
-    "i18next-fs-backend": "^2.2.0",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "validator": "^13.11.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "eslint": "^8.47.0",
-    "eslint-plugin-node": "^11.1.0"
+    "cloudinary": "^1.40.0"
   },
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/your-username/anime-world.git"
-  },
-  "bugs": {
-    "url": "https://github.com/your-username/anime-world/issues"
-  },
-  "homepage": "https://github.com/your-username/anime-world#readme"
+    "node": ">=18.0.0"
+  }
 }
