--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,14 @@
 {
   "name": "anime-world-frontend",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -13,15 +16,19 @@
     "react-router-dom": "^6.8.0",
     "axios": "^1.3.0",
     "i18next": "^22.4.0",
-    "react-i18next": "^12.0.0",
-    "video.js": "^8.0.0",
-    "react-video-player": "^1.0.0"
+    "react-i18next": "^12.0.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0",
-    "tailwindcss": "^3.2.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "eslint": "^8.35.0",
+    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.2.0",
+    "vite": "^4.1.0"
   }
 }
