--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "build": "echo 'No build step needed for Node.js' && exit 0",
-    "test": "echo 'No tests specified' && exit 0",
+    "build": "echo 'No build step needed for Node.js'",
+    "test": "echo 'No tests specified'",
     "seed": "node scripts/seedData.js"
   },
   "keywords": ["anime", "streaming", "api", "nodejs", "express", "mongodb"],
@@ -20,9 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.40.0"
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
